--- a/package.json
+++ b/package.json
@@ -8,12 +8,13 @@
   },
   "dependencies": {
     "chart.js": "^3.6.0",
-    "core-js": "^3.6.5",
+    "core-js": "^3.19.3",
     "mitt": "^3.0.0",
     "primeflex": "^2.0.0",
     "primeicons": "^5.0.0",
     "primevue": "^3.8.2",
-    "vue": "^3.0.0"
+    "vue": "^3.0.0",
+    "whatwg-fetch": "^3.6.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.3.0",
